--- a/js_01 Estrutura.html
+++ b/js_01 Estrutura.html
@@ -22,7 +22,7 @@ var js_nome;
 js_nome = window.prompt('Entre com seu nome: ' , 'Digite seu nome nesta caixa');
 
 /* Saida de Dados */
-document.write('01\u00e1 ' + js_nome + ' Seja Bem Vindo!'); // Menssagem de Saudação Personalizada
+document.write('Olá ' + js_nome + ' Seja Bem Vindo!'); // Menssagem de Saudação Personalizada
 
 //-->
 </script>
