--- a/js_01 Concatenação.html
+++ b/js_01 Concatenação.html
@@ -41,7 +41,7 @@
 			js_nomecompleto = js_nome + ' ' + js_sobrenome;
 			
 			/* Saida de Dados */
-			window.alert('Ola! ' + js_nomecompleto);
+			window.alert('Olu00e1! ' + js_nomecompleto);
 			
 		}
 		
